--- a/src/components/Sidenav/_sidenav.scss
+++ b/src/components/Sidenav/_sidenav.scss
@@ -2,6 +2,7 @@
   height: 100vh;
   width: 200px;
   background-color: darken($darkBlue, 10%);
+  position: fixed;
 }
 
 .sidenav-section {
